# Zenith

./: Cargo.toml  flake.nix  shell.nix
.github/workflows/: rustmainfull.yml
examples/ash_test/: Cargo.toml
examples/ash_test/src/: example_base.rs  main.rs
examples/sandbox/: Cargo.toml
examples/sandbox/src/: main.rs
examples/vulkan_tutorial/: Cargo.toml
examples/vulkan_tutorial/src/: align.rs  log.rs  main.rs  vulkan.rs
examples/vulkan_tutorial/src/shaders/: frag.frag  v.vert  vert.vert
glsl_to_spirv_macro/: Cargo.toml  build.rs
glsl_to_spirv_macro/src/: compiler.rs  lib.rs  parse.rs  shadercserde.rs  tokengeneration.rs
glsl_to_spirv_macro/src/utils/: error.rs  key_value.rs  mod.rs  span.rs
glsl_to_spirv_macro/tests/: mod.rs
glsl_to_spirv_macro/tests/shaders/: frag.frag  utils.glsl  vert.vert
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs  promise.rs  resource_management.rs  undroppable.rs  unsafe_ref.rs
rendering_backend/vulkan/: Cargo.toml  build.rs
rendering_backend/vulkan/examples/: Cargo.toml
rendering_backend/vulkan/examples/src/: triangle.rs  winit_app.rs
rendering_backend/vulkan/src/: defaults.rs  device.rs  error.rs  instance.rs  lib.rs  library.rs  raw.rs  surface.rs  types.rs
spirv_reflect/: Cargo.toml  compile.sh
spirv_reflect/example/: compile.rs  mod.rs
spirv_reflect/example/shaders/: frag  frag.frag  oldvert.vert  sampler  sampler.frag  vert  vert.vert
spirv_reflect/src/: lib.rs  types.rs
vortex/: Cargo.toml  build.rs
vortex/src/: build_constants.rs  entry.rs  event.rs  layer.rs  lib.rs  log.rs  undrop.rs
vortex/src/debug/: mod.rs
vortex/src/event/: input.rs  mod.rs
vortex/src/infrastructure/: mod.rs  unsafe_ref.rs
vortex/src/render/: mod.rs
vortex/src/render/vulkan_platform/: mod.rs
vortex/src/render/vulkan_platform/api/: constants.rs  error.rs  library.rs  mod.rs  types.rs
vortex/src/window/: input.rs  mod.rs
vortex/src/window/winit/: mod.rs
vortex/src/window/winit_platform/: mod.rs
vortex_macros/: Cargo.toml
vortex_macros/src/: lib.rs
zenith/: Cargo.toml  build.rs
zenith/src/: lib.rs  log.rs  undrop.rs
zenith/src/event/: input.rs  mod.rs
zenith/src/infrastructure/: mod.rs
zenith_macros/: Cargo.toml
zenith_macros/src/: lib.rs
