[workspace]
members = [
  "examples/sandbox",
  "glsl_to_spirv_macro",
  "spirv_reflect",
  "zenith",
  "zenith_macros",
]
resolver = "2"
license = "MIT"


# Globally set
[toolchain]
channel = "nightly"


# projects
# -----------------------------------------------
[workspace.dependencies.zenith]
version = "0.1"
path = "zenith"

[workspace.dependencies.spirv_reflect]
version = "0.1"
path = "spirv_reflect"
[workspace.dependencies.glsl_to_spirv_macro]
version = "0.1"
path = "glsl_to_spirv_macro"

[workspace.dependencies.zenith_macros]
version = "0.1"
path = "zenith_macros"
# -----------------------------------------------


# TODO: Add explanation for the dependencies
[workspace.dependencies]
# tracing
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# error handling
thiserror = { version = "1.0.64" }
anyhow = { version = "1.0" }

# utilities
smart-default = { version = "0.7.1" }
derive_more = { version = "1", features = ["full"] }
rand = "0.8.5"
smallvec = "1.13.2"
cstr = "0.2.12"
bitflags = "2.6.0"

# serialization
serde = { version = "1.0.210", features = ["serde_derive"] }
bincode = "1.3.3"
serde_json = { version = "1.0.128" }

# shaders
# shader compiler
shaderc = { version = "0.8.3" }


# vulkan 
ash = { version = "0.38.0", features = ["linked", "debug"] }
ash-window = { version = "0.13.0" }
rspirv = { version = "0.12.0" }

# images 
png = "0.17"
image = "0.25.2"

# math 
cgmath = "0.18"
nalgebra = "0.33.0"

# windows
# TODO: is this still true?
# Using a later version brakes raw handles
raw-window-handle = "0.6.2"
winit = { version = "0.30.5" }

# macros
paste = "1.0.15"
syn = { version = "2.0.77" }
quote = { version = "1.0.37" }
proc-macro2 = { version = "1.0.86" }
proc-macro2-diagnostics = "0.10.1"


[profile.CI]
inherits = "dev"
debug = 0
codegen-units = 1
incremental = false

[profile.test]
opt-level = 1

[profile.bench]
lto = true
codegen-units = 1


# Intented for quick development
[profile.dev]
opt-level = 0
debug = true
lto = false

# Intented for testing
[profile.release]
opt-level = 3
debug = true
lto = true
codegen-units = 1

# Intented for distribution
[profile.dist]
inherits = "release"
debug = false
