[workspace]
members = [
  "vortex",
  "glsl_to_spirv_macro",
  "spirv_reflect",
  "vortex_macros",
  "examples/sandbox",
  "examples/vulkan_tutorial",
  "infrastructure",
  "rendering_backend/vulkan",
]
resolver = "2"
license = "MIT"
edition = "2021"


# Globally set
[toolchain]
channel = "nightly"


# projects
# -----------------------------------------------

[workspace.dependencies.vortex]
version = "0.1"
path = "vortex"
default-features = true


[workspace.dependencies.spirv_reflect]
version = "0.1"
path = "spirv_reflect"
[workspace.dependencies.glsl_to_spirv_macro]
version = "0.1"
path = "glsl_to_spirv_macro"

[workspace.dependencies.vortex_macros]
version = "0.1"
path = "vortex_macros"


[workspace.dependencies.infrastructure]
version = "0.1"
path = "infrastructure"
[workspace.dependencies.vulkan]
version = "0.1"
path = "rendering_backend/vulkan"
# -----------------------------------------------

[workspace.dependencies]
# tracing
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# error handling
thiserror = { version = "1.0.64" }
anyhow = { version = "1.0" }

# utilities
smart-default = { version = "0.7.1" }
derive_more = { version = "1", features = ["full"] }
rand = "0.8.5"
# make small vectors stay on the stack
smallvec = "1.13.2"
# Create static constants C like strings
cstr = "0.2.12"
bitflags = "2.6.0"

# serialization
serde = { version = "1.0.210", features = ["serde_derive"] }
bincode = "1.3.3"
serde_json = { version = "1.0.128" }

# shaders
# shader compiler
shaderc = { version = "0.8.3" }


# vulkan 
ash = { version = "0.38.0", features = ["linked", "debug"] }
ash-window = { version = "0.13.0" }
rspirv = { version = "0.12.0" }

# images 
png = "0.17"
image = "0.25.2"

# math 
nalgebra = { version = "0.33.0" }

# windows
raw-window-handle = "0.6.2"
winit = { version = "0.30.5" }

# macros
paste = "1.0.15"
syn = { version = "2.0.77" }
quote = { version = "1.0.37" }
proc-macro2 = { version = "1.0.86" }
proc-macro2-diagnostics = "0.10.1"


[profile.CI]
inherits = "dev"
debug = 0
codegen-units = 1
incremental = false

[profile.test]
opt-level = 1

[profile.bench]
lto = true
codegen-units = 1


# Intented for quick development
[profile.dev]
opt-level = 0
debug = true
lto = false

# Intented for testing
[profile.release]
opt-level = 3
debug = true
lto = true
codegen-units = 1

# Intented for distribution
[profile.dist]
inherits = "release"
debug = false
