[package]
name = "glsl_to_spirv_macro"
version = "0.1.0"
author = "Reun85"
edition = "2021"
publish = true
doc = true
test = true
proc-macro-diagnostics = true

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[toolchain]
channel = "nightly"
[features]
default = []
generate_debug_info = []
[dependencies]
shaderc = { version = "0.8.3" }
syn = { version = "2.0.48" }
quote = { version = "1.0.35" }
proc-macro2 = { version = "1.0.78" }
proc-macro2-diagnostics = "0.10.1"
thiserror = { version = "1.0.56", workspace = true }
spirv_reflect = { workspace = true }
nalgebra = "0.33.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
bincode = "1.3.3"
# serde_json = "1.0.114"
