[package]
name = "glsl_to_spirv_macro"
version = "0.1.0"
author = "Reun85"
edition = "2021"
publish = true
doc = true
test = true
proc-macro-diagnostics = true

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[toolchain]
channel = "nightly"
[features]
default = []
generate_debug_info = []
[dependencies]
shaderc = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
proc-macro2-diagnostics = { workspace = true }
thiserror = { workspace = true }
spirv_reflect = { workspace = true }
nalgebra = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
#serde_json = {workspace=true}
