[package]
name = "spirv_reflect"
version = "0.1.0"
author = "Reun85"
edition = "2021"
publish = true
doc = true
test = true

[dev-dependencies]
nalgebra = { workspace = true }
shaderc = { workspace = true }
ash = { workspace = true }

[[example]]
name = "mod"
path = "example/mod.rs"

[toolchain]
channel = "nightly"

[lib]
crate-type = ["lib"]
[dependencies]
rspirv = { workspace = true }
thiserror = { workspace = true }
