[package]
name = "spirv_reflect"
version = "0.1.0"
authors = ["Reun85"]
edition = "2021"
publish = true

[dev-dependencies]
nalgebra = { workspace = true }
shaderc = { workspace = true }
ash = { workspace = true }

[[example]]
name = "spirv_reflect"
path = "example/mod.rs"

[lib]
crate-type = ["lib"]
[dependencies]
rspirv = { workspace = true }
thiserror = { workspace = true }
