[package]
name = "vortex"
version = "0.1.0"
author = "Reun85"
repository = "https://github.com/Reun85/Zenith"

readme = "../README.md"


[features]
# default = ["winit"]
# Window Handler
# winit = ["dep:winit"]
# Potentially 
#sdl = []
#glfw = []

# Support Window Managers
#wayland = []
#potentially
#winrt = []

[dependencies]
smart-default = { workspace = true }
glsl_to_spirv_macro = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
nalgebra = { workspace = true }
winit = { workspace = true, optional = true }
bitflags = { workspace = true }
smallvec = { workspace = true }

vortex_macros = { workspace = true }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(build_type, values("debug","release","dist"))',
] }
