[package]
name = "vortex"
version = "0.1.0"
authors = ["Reun85"]
repository = "https://github.com/Reun85/Zenith"
edition = "2021"
readme = "../README.md"

build = "../build.rs"


[features]
default = ["use-winit"]

# Window Handler
use-winit = ["dep:winit"]
# Potentially 
#sdl = []
#glfw = []

# Support Window Managers
#wayland = []
#potentially
#winrt = []

#[lib]
#crate-type = ["dylib", "rlib"]
[dependencies]


smart-default = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
nalgebra = { workspace = true }
bitflags = { workspace = true }
smallvec = { workspace = true }
raw-window-handle = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

vortex_macros = { workspace = true }
infrastructure = { workspace = true }


# feature = winit
winit = { workspace = true, optional = true }

# feature vulkan
horizon = { workspace = true, optional = true }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(build_type, values("debug","release","dist"))',
  'cfg(debug)',
] }
