[package]
name = "vortex_macros"
version = "0.1.0"
authors = ["Reun85"]
repository = "https://github.com/Reun85/Zenith"
edition = "2021"
publish = true
description = "Vortex Macros."
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]
[dependencies]
