[package]
name = "zenith"
version = "0.1.0"
author = "Reun85"
repository = "https://github.com/Reun85/Zenith"
edition = "2021"
publish = true
doc = true
test = true

readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smart-default = { workspace = true }
glsl_to_spirv_macro = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
