[package]
name = "zenith"
version = "0.1.0"
author = "Reun85"
repository = "https://github.com/Reun85/Zenith"
edition = "2021"
publish = true
doc = true
test = true

readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["winit"]
# Window Handler
winit = ["dep:winit"]
# Potentially 
#sdl = []
#glfw = []

# Support Window Managers
#wayland = []
#potentially
#winrt = []

[lib]
crate-type = ["dylib"]
[dependencies]
smart-default = { workspace = true }
glsl_to_spirv_macro = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
nalgebra = { workspace = true }
winit = { workspace = true, optional = true }
bitflags = { workspace = true }
