[package]
name = "ash_test"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "ash_test"
test = false
bench = false
doc = false


[dependencies]
ash = { version = "0.37.3", features = ["linked", "debug"] }
ash-window = { version = "0.12.0" }
glsl_to_spirv_macro = { workspace = true }
raw-window-handle = "0.5.2"

zenith = { workspace = true }

cgmath = "0.18"
png = "0.17"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "1.0" }
anyhow = { version = "1.0" }
nalgebra = "0.33.0"

[dependencies.winit]
version = "0.28.7"
