[package]
name = "ash_test"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "ash_test"
test = false
bench = false
doc = false


[dependencies]
ash = { workspace = true }
ash-window = { workspace = true }
glsl_to_spirv_macro = { workspace = true }
raw-window-handle = { workspace = true }

zenith = { workspace = true }

cgmath = { workspace = true }
png = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
nalgebra = { workspace = true }
winit = { workspace = true }
