[package]
name = "sandbox"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "sandbox"
test = false
bench = false
doc = false


[dependencies]
glsl_to_spirv_macro = { workspace = true }
vortex = { workspace = true }

ash = { workspace = true }
ash-window = { workspace = true }
raw-window-handle = { workspace = true }
png = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
smart-default = { workspace = true }
derive_more = { workspace = true }
cstr = { workspace = true }
smallvec = { workspace = true }
image = { workspace = true }
winit = { workspace = true }
nalgebra = { workspace = true }
