[package]
name = "vulkan_tutorial"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "vulkan_tutorial"
test = false
bench = false
doc = false


[profile.release]
debug = true

[dependencies]
ash = { version = "0.37.3+1.3.281", features = ["linked", "debug"] }
ash-window = { version = "0.12.0" }
glsl_to_spirv_macro = { path = "../../glsl_to_spirv_macro" }
# Using a later version brakes raw handles
raw-window-handle = "0.5.2"
zenith = { workspace = true }

cgmath = "0.18"
png = "0.17"
rand = "0.8.4"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "1.0" }
anyhow = { version = "1.0" }
smart-default = { version = "0.7.1" }
derive_more = "0.99.17"
cstr = "0.2.11"
smallvec = "1.13.1"
image = "0.24.8"
nalgebra = "0.33.0"

[dependencies.winit]
# Using a later version brakes raw handles
version = "0.28.7"
