[package]
name = "vulkan_tutorial"
version = "0.0.0"
edition = "2021"
publish = false


[dependencies]
glsl_to_spirv_macro = { workspace = true }

tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# error handling
thiserror = { version = "1.0.64" }
anyhow = { version = "1.0" }

# utilities
smart-default = { version = "0.7.1" }
derive_more = { version = "1", features = ["full"] }
rand = "0.8.5"
smallvec = "1.13.2"

# serialization
serde = { version = "1.0.210", features = ["serde_derive"] }
bincode = "1.3.3"
serde_json = { version = "1.0.128" }

# shaders
# shader compiler
shaderc = { version = "0.8.3" }


# vulkan 
ash = { version = "0.37.3", features = ["linked", "debug"] }
ash-window = { version = "0.12.0" }
rspirv = { version = "0.12.0" }

# images 
png = "0.17"
image = "0.25.2"

# math 
cgmath = "0.18"
nalgebra = "0.33.0"

# windows
# Using a later version brakes raw handles
raw-window-handle = "0.5.2"
winit = { version = "0.28.7" }

# macros
paste = "1.0.15"
syn = { version = "2.0.77" }
quote = { version = "1.0.37" }
proc-macro2 = { version = "1.0.86" }
proc-macro2-diagnostics = "0.10.1"
