[package]
name = "vulkan"
version = "0.1.0"
edition = "2021"
authors = ["Reun85"]
repository = "https://github.com/Reun85/Zenith"
readme = "../README.md"
publish = true
build = "../../build.rs"

[lib]
crate-type = ["lib"]

[dependencies]
ash = { workspace = true }
ash-window = { workspace = true }


smart-default = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
nalgebra = { workspace = true }
bitflags = { workspace = true }
smallvec = { workspace = true }

raw-window-handle = { workspace = true }
infrastructure = { workspace = true }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(build_type, values("debug","release","dist"))',
  'cfg(debug)',
] }
